resources/assets/sass/_custom.scss
/* ... */
.alert {
  margin-top: 10px;
}

.meal-quantities {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  margin-left: -5px;
  margin-right: -5px;

  li {
    flex: 0 1 calc(50% - 10px);
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 5px;
    min-height: 2em;
  }
}

.modalMeal {
  height: 80px;
  width: 80px;
}

.modal-title {
  font-size: 30px;
}

.order-quantity {
  font-size: 17px;
  color: #838181;
  position: relative;
  top: 2px;
}

.label-info {
  background-color: #28a745;
  border-radius: 5px;
  padding: 3px;
}

.faded {
  opacity: 0.5;
}

.VuePagination {
  text-align: center;
}

.vue-title {
  text-align: center;
  margin-bottom: 10px;
}

.vue-pagination-ad {
  text-align: center;
}

.glyphicon.glyphicon-eye-open {
  width: 16px;
  display: block;
  margin: 0 auto;
}

.thumb {
  max-width: 150px;
}

.picture-input {
  .preview-container {
  }
}

.filters .btn-secondary {
  background-color: #ffffff !important;
  margin-right: 5px !important;
}

.filters .active {
  color: #ffffff !important;
  border-color: #dedede !important;
  background-color: #f25727 !important;
}

.filters .focus,
.focus {
  box-shadow: 0 0 0 0rem !important;
}

.storeFilters .btn-secondary {
  background-color: #ffffff !important;
  margin-right: 5px !important;
}

.storeFilters .active {
  color: #ffffff !important;
  border-color: #dedede !important;
  background-color: #f25727 !important;
}

.storeFilters .focus,
.focus {
  box-shadow: 0 0 0 0rem !important;
}

.nf-ingredientListDiv {
  line-height: 1em;
}

/*Menu*/

.main-menu-area,
.bag-area {
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  overflow-y: scroll;

  @include media-breakpoint-up(md) {
    height: calc(100vh - 210px);
  }
}

.main-menu-area {
  @include media-breakpoint-down(sm) {
    //margin-bottom: 160px;
  }
}

.bag-area {
  padding-top: 75px;

  @include media-breakpoint-down(sm) {
    padding-top: 8px;
    padding-bottom: 8px;
    /*
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background: #fff;
    padding-top: 8px;
    padding-bottom: 8px;*/
  }

  @include media-breakpoint-down(md) {
    .bag-item-image {
      display: none;
    }
  }
}

.quantity {
  border-radius: 10px;
  opacity: 0.5;
  text-align: center;
}

.menu-item {
  margin-bottom: 10px;
}

.menu-item-img {
  width: 100%;
}

.cart-item {
  width: 100%;
}

.cart-item-img {
  height: 80px;
  width: 80px;
}

.bag-item-img {
  height: 100px;
}

.modal-meal-image img {
  width: 100% !important;

  @include media-breakpoint-down(md) {
    margin-bottom: 30px;
  }
}

.modal-meal-image-full img {
  width: 300px !important;
}

.ingredient-img {
  width: 50px !important;
}

.quantity {
  width: 115px;
  border-radius: 20px;
  opacity: 0.5;
  text-align: center;
}

.categories {
  padding-top: 20px;
}

.menu,
.bag {
  max-width: 1700px;
}

.bag-actions {
  @include media-breakpoint-down(sm) {
    .btn {
      font-size: 13px;
    }
  }
}

.checkout-item {
  border-bottom: 1px solid #e1e1e1;
  margin-bottom: 10px;
  width: 100%;
  height: 50px;
}

.checkout-item-total {
  border-bottom: 1px solid #e1e1e1;
  margin-bottom: 10px;
  width: 100%;
  height: 75px;
}

.checkout-item-hide {
  display: none !important;
}

.transfer-instructions {
  border-bottom: 1px solid #e1e1e1;
  margin-bottom: 10px;
  width: 100%;
}

.bag-item {
  border-bottom: 1px solid #e1e1e1;
  margin-bottom: 10px;
  width: 100%;

  .bag-item-quantity {
    flex-grow: 0 !important;
    text-align: center;
  }
  .bag-item-image {
    flex-grow: 0 !important;

    @include media-breakpoint-down(sm) {
      display: none;
    }
  }
}

.bag-quantity {
  text-align: center;
  vertical-align: center;
  position: relative;
  top: 10px;
}

.clear-meal {
  width: 10px;
}

.filters ul {
  display: inline;
}

.store-logo-area {
  height: 140px !important;
  display: flex;
  justify-content: center;
}

.category-area {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  border-top: 1px solid #d3d3d3;
  border-bottom: 1px solid #d3d3d3;
  margin: 20px 0px !important;

  ul {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center !important;
    align-content: center !important;
    padding: 0;
    margin: 0;

    li {
      font-size: 18px;
      font-weight: bold;
      margin-left: 18px;
      margin-right: 18px;

      &:first-child,
      &:last-child {
        margin-left: 0;
        margin-right: 0;
      }
    }
  }

  > div {
    @include media-breakpoint-up(md) {
      flex: 0 0 190px;
    }
    @include media-breakpoint-up(lg) {
      flex: 0 0 210px;
    }
  }

  @include media-breakpoint-down(sm) {
    padding-top: 10px;
    padding-bottom: 10px;

    > div {
    }
    ul {
      display: block;
      order: 3;
      flex: 0 0 100%;
      margin-top: 15px;

      li {
        display: block;
        margin-left: 0;
        margin-right: 0;
        text-align: center;
      }
    }

    @include media-breakpoint-up(sm) {
      ul {
        display: flex;

        li {
          margin-left: 10px;
          margin-right: 10px;
        }
      }
    }
  }

  @include media-breakpoint-up(md) {
    height: 45px !important;
  }
}

.category-area ul li:hover {
  cursor: pointer !important;
}

.dbl-underline {
  padding-bottom: 8px !important;
  font-family: "Montserrat", sans-serif !important;
  position: relative;

  &:after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: 90px;
  }
}

.filter-area {
  position: sticky !important;
}

.dropdown-item {
  text-decoration: none !important;
}

.dropdown-menu-right a:hover {
  color: #ffffff !important;
}

.light-background {
  background-color: #f9f9f9 !important;
}

.modal-body {
  margin-top: 0px !important;
  padding-top: 0px !important;
}

.border-bottom {
  border-bottom: 1px solid #e4e7ea !important;
}
/* ... */

